basilisk emu: fix cursor jumping, hide double cursor on canvas (thanks james for fix!)

--- a/site/assets/styles.css
+++ b/site/assets/styles.css
@@ -99,6 +99,7 @@ owt-v86-browser, owt-bas-browser {
 
 owt-bas-browser canvas {
   margin-top: 1em;
+  cursor: none;
 }
 
 owt-v86-browser {
